fix 12868 (NPE UnitSeparator#getComparatorUnitCategories) (#13374)
* fix 12868 (NPE UnitSeparator#getComparatorUnitCategories)

AvatarPanelFactory.java
- method buildPanel: Parameter territory annotated NotNull
- method createUnitStackImage: Parameter territory annotated NotNull

BattleCalculatorDialog.java
- method show: Parameter territory annotated Nullable
- .collect(Collectors.toList()) -> .toList()

BattleCalculatorPanel.java
- attribute battleSiteTerritory annotated Nullable
- constructor: Parameter territory annotated Nullable
- method updateStats/findPotentialBattleSite: Moved newBattleSiteTerritory == null check to method findPotentialBattleSite

PlayerUnitsPanel.java
- rename method isEmpty to hasNoneZeroUnitEntries: Revert logic and usages
- method init: Parameter territory annotated Nullable; panelPlayer annotated NotNull
- method getAllUnitCategories: Parameter panelPlayer annotated NotNull
- .collect(Collectors.toList()) -> .toList()

TileManager.java
- method updateTerritory: Parameter territory annotated NotNull
- method drawTerritory: Parameter territory annotated NotNull
- method drawUnits: Handle lastPlace == null added; Parameter territory annotated NotNull
- method getTiles: Extract methods getBoundsShiftX/getBoundsShiftY
- .collect(Collectors.toList()) -> .toList()

UnitScroller.java
- attribute lastFocusedTerritory: annotated Nullable
- method updateRenderingToTerritory: Parameter territory annotated NotNull

UnitSeparator.java
- method getSortedUnitCategories: Parameter territory annotated Nullable
- method sortUnitCategories: Parameter territory annotated Nullable; Parameter currentPlayer annotated NotNull
- method getComparatorUnitCategories: Parameter territory annotated Nullable; Parameter currentPlayer annotated NotNull; getData() from currentPlayer

UnitSeparatorTest.java
- rename method testGetSortedUnitCategoriesDontDrawUnit to testGetSortedUnitCategoriesDoNotDrawUnit

* fix 12868 (NPE UnitSeparator#getComparatorUnitCategories)
spotl